@@ -2532,7 +2532,10 @@ Command : TITLE\n\r\
 Usage   : TITLE\n\r\
 Example : title\n\r\
 This command allows players who have been awarded 1 or more titles to \
-select which title is displayed when their character is seen.
+select which title is displayed when their character is seen.  If a \
+prefix and suffix title are chosen, they will be displayed together.  \
+Selecting "Do not use a title", and then selecting a suffix or prefix \
+will use the title alone.
 
 LEARN=\
 Command : LEARN\n\r\
